# xml2gpui

./: Cargo.toml  README.md  letitsnow.sh  test.html
crates/example/: Cargo.toml
crates/example/src/: hello.rs  main.rs
crates/xml2gpui/: Cargo.toml  LICENSE-MIT
crates/xml2gpui/src/: tree.rs
crates/xml2gpui_macros/: Cargo.toml  LICENSE-APACHE
crates/xml2gpui_macros/src/: lib.rs
