[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
xml2gpui = { path = "../xml2gpui" }
notify = "6.1.1"
futures = "0.3.30"
