[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "94593dca4bd906ad38aa5a15e8992e2ee188bd29" }
xml2gpui = { path = "../xml2gpui" }
notify = "6.1.1"
futures = "0.3.30"
