[package]
name = "xml2gpui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpisto/xml2gpui"
homepage = "https://github.com/tpisto/xml2gpui"
description = "Converts XML to GPUI elements"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "94593dca4bd906ad38aa5a15e8992e2ee188bd29" }
xml2gpui_macros = { path = "../xml2gpui_macros", version = "0.1.0" }
quick-xml = "0.31.0"
futures = "0.3.30"
