[package]
name = "xml2gpui_macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpisto/xml2gpui"
homepage = "https://github.com/tpisto/xml2gpui"
description = "Helper macros to convert XML attributes to GPUI attributes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.52", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"